Prevent word-wrap on title link

--- a/client/common/sass/components/_menu.sass
+++ b/client/common/sass/components/_menu.sass
@@ -12,6 +12,7 @@
 .site-title-link
 	z-index: 1010
 	margin: 1.5rem
+	min-width: 11.5rem
 	text-decoration: none
 	font-weight: 700
 
